--- a/HoldOutVSKfold.ipynb
+++ b/HoldOutVSKfold.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Comparing Hold-out Vs K-Fold Cross Validation (ML ASSIGNMENT 1) D21127639"
+    "# Comparing Hold-out Vs K-Fold Cross Validation"
    ]
   },
   {
